fix(layout): home page overflowing content main section

--- a/src/pages/landing/_landing.scss
+++ b/src/pages/landing/_landing.scss
@@ -11,6 +11,10 @@
 @import "../../components/logo/logo";
 @import "../../includes/background/background";
 
+main {
+  overflow: hidden;
+}
+
 .container {
   @include for-desktop {
     width: 100%;
